syntax = "proto3";
package etherlink.etherlink;

import "gogoproto/gogo.proto";
import "etherlink/etherlink/params.proto";

option go_package = "etherlink/x/etherlink/types";

// GenesisState defines the etherlink module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
}
